// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when default 1`] = `
<div
  class="container"
  data-testid="favored-enemy-selector"
>
  <div
    class="monster-type-container"
  >
    <label
      class="label"
      id="monster-type"
    >
      Select Monster Type
    </label>
    <div
      aria-labelledby="monster-type"
      class="container"
      data-testid="select"
      style="font-size: 1.2rem;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="button"
        data-testid="select-button"
        type="button"
      >
        Aberration
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-activedescendant="Aberration"
        class="list"
        data-testid="select-list"
        role="listbox"
        style="display: none;"
        tabindex="-1"
      >
        <li
          aria-selected="false"
          class="item"
          data-testid="data-blank"
          role="option"
          tabindex="0"
        >
          —
        </li>
        <li
          aria-selected="true"
          class="item selected"
          data-testid="data-ABERRATION"
          role="option"
          tabindex="0"
        >
          Aberration
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-BEAST"
          role="option"
          tabindex="0"
        >
          Beast
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-CELESTIAL"
          role="option"
          tabindex="0"
        >
          Celestial
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-CONSTRUCT"
          role="option"
          tabindex="0"
        >
          Construct
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-DRAGON"
          role="option"
          tabindex="0"
        >
          Dragon
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-ELEMENTAL"
          role="option"
          tabindex="0"
        >
          Elemental
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-FEY"
          role="option"
          tabindex="0"
        >
          Fey
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-FIEND"
          role="option"
          tabindex="0"
        >
          Fiend
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-GIANT"
          role="option"
          tabindex="0"
        >
          Giant
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-HUMANOID"
          role="option"
          tabindex="0"
        >
          Humanoid
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-MONSTROSITY"
          role="option"
          tabindex="0"
        >
          Monstrosity
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-OOZE"
          role="option"
          tabindex="0"
        >
          Ooze
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-PLANT"
          role="option"
          tabindex="0"
        >
          Plant
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-UNDEAD"
          role="option"
          tabindex="0"
        >
          Undead
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders correctly when humanoid 1`] = `
<div
  class="container"
  data-testid="favored-enemy-selector"
>
  <div
    class="monster-type-container"
  >
    <label
      class="label"
      id="monster-type"
    >
      Select Monster Type
    </label>
    <div
      aria-labelledby="monster-type"
      class="container"
      data-testid="select"
      style="font-size: 1.2rem;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="button"
        data-testid="select-button"
        type="button"
      >
        Humanoid
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-activedescendant="Humanoid"
        class="list"
        data-testid="select-list"
        role="listbox"
        style="display: none;"
        tabindex="-1"
      >
        <li
          aria-selected="false"
          class="item"
          data-testid="data-blank"
          role="option"
          tabindex="0"
        >
          —
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-ABERRATION"
          role="option"
          tabindex="0"
        >
          Aberration
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-BEAST"
          role="option"
          tabindex="0"
        >
          Beast
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-CELESTIAL"
          role="option"
          tabindex="0"
        >
          Celestial
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-CONSTRUCT"
          role="option"
          tabindex="0"
        >
          Construct
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-DRAGON"
          role="option"
          tabindex="0"
        >
          Dragon
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-ELEMENTAL"
          role="option"
          tabindex="0"
        >
          Elemental
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-FEY"
          role="option"
          tabindex="0"
        >
          Fey
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-FIEND"
          role="option"
          tabindex="0"
        >
          Fiend
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-GIANT"
          role="option"
          tabindex="0"
        >
          Giant
        </li>
        <li
          aria-selected="true"
          class="item selected"
          data-testid="data-HUMANOID"
          role="option"
          tabindex="0"
        >
          Humanoid
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-MONSTROSITY"
          role="option"
          tabindex="0"
        >
          Monstrosity
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-OOZE"
          role="option"
          tabindex="0"
        >
          Ooze
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-PLANT"
          role="option"
          tabindex="0"
        >
          Plant
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-UNDEAD"
          role="option"
          tabindex="0"
        >
          Undead
        </li>
      </ul>
    </div>
  </div>
  <div
    class="humanoid-container"
  >
    <div
      class="monster-type-container"
    >
      <label
        class="label"
        id="humanoid-1"
      >
        Select Humanoid Type 1
      </label>
      <div
        aria-labelledby="humanoid-1"
        class="container"
        data-testid="select"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Dwarf
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Dwarf"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-DWARF"
            role="option"
            tabindex="0"
          >
            Dwarf
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-ELF"
            role="option"
            tabindex="0"
          >
            Elf
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GNOLL"
            role="option"
            tabindex="0"
          >
            Gnoll
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GNOME"
            role="option"
            tabindex="0"
          >
            Gnome
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GOBLINOID"
            role="option"
            tabindex="0"
          >
            Goblinoid
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-HUMAN"
            role="option"
            tabindex="0"
          >
            Human
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-KOBOLD"
            role="option"
            tabindex="0"
          >
            Kobold
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-LIZARDFOLK"
            role="option"
            tabindex="0"
          >
            Lizardfolk
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-MERFOLK"
            role="option"
            tabindex="0"
          >
            Merfolk
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-ORC"
            role="option"
            tabindex="0"
          >
            Orc
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-SAHUAGIN"
            role="option"
            tabindex="0"
          >
            Sahuagin
          </li>
        </ul>
      </div>
    </div>
    <div
      class="monster-type-container"
    >
      <label
        class="label"
        id="humanoid-2"
      >
        Select Humanoid Type 2
      </label>
      <div
        aria-labelledby="humanoid-2"
        class="container"
        data-testid="select"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Elf
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Elf"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-DWARF"
            role="option"
            tabindex="0"
          >
            Dwarf
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-ELF"
            role="option"
            tabindex="0"
          >
            Elf
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GNOLL"
            role="option"
            tabindex="0"
          >
            Gnoll
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GNOME"
            role="option"
            tabindex="0"
          >
            Gnome
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GOBLINOID"
            role="option"
            tabindex="0"
          >
            Goblinoid
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-HUMAN"
            role="option"
            tabindex="0"
          >
            Human
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-KOBOLD"
            role="option"
            tabindex="0"
          >
            Kobold
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-LIZARDFOLK"
            role="option"
            tabindex="0"
          >
            Lizardfolk
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-MERFOLK"
            role="option"
            tabindex="0"
          >
            Merfolk
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-ORC"
            role="option"
            tabindex="0"
          >
            Orc
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-SAHUAGIN"
            role="option"
            tabindex="0"
          >
            Sahuagin
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
